--- a/package.json
+++ b/package.json
@@ -38,7 +38,12 @@
     "ie > 8"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/vue-fontawesome": "^0.0.22",
     "babel-runtime": "^6.26.0",
+    "bootstrap-vue": "^2.0.0-rc.9",
     "lodash": "^4.17.4",
     "prettier": "^1.7.4",
     "prettier-eslint-cli": "^4.4.0",
